<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="8dp"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="10dp">

    <TextView
            android:id="@+id/tv_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp" />
    <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profit"
            android:textSize="20sp" />
    <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cost"
            android:textSize="20sp" />
    <TextView
            android:id="@+id/resumo_card_receita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:textColor="@color/receita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/inicial_value" />
    <TextView
            android:id="@+id/resumo_card_despesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/despesa"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumo_card_receita"
            android:text="@string/inicial_value" />
    <View
            android:id="@+id/v_divider"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumo_card_despesa"
            android:background="#848484" />
    <TextView
            android:id="@+id/resumo_card_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_divider"
            android:text="@string/inicial_value" />

</android.support.constraint.ConstraintLayout>